--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,20 @@
 {
-  "short_name": "YOUR NAME",
-  "name": "YOUR NAME | Portfolio",
+  "short_name": "Nwoke Precious",
+  "name": "Nwoke Precious | Portfolio",
   "lang": "en",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo2.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logo2.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "logo2.png",
       "type": "image/png",
       "sizes": "512x512"
     }
